# patchogen

./: CMakeLists.txt  LICENCE  README.md  added.cpp.in  common.cpp  common.h  config.h.in  crc.cpp  diff.cpp  modified.cpp.in  patch.cpp  patch.h  removed.cpp.in  wrap.cpp  zip.cpp
